--- a/GitWatch/Base.lproj/Main.storyboard
+++ b/GitWatch/Base.lproj/Main.storyboard
@@ -99,6 +99,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="ZzV-5E-dAp" kind="show" identifier="RepositoryController" id="bSq-GZ-czO"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -347,6 +350,159 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1996" y="-453"/>
+        </scene>
+        <!--Repository Controller-->
+        <scene sceneID="FMa-Tr-5Zj">
+            <objects>
+                <viewController id="ZzV-5E-dAp" customClass="RepositoryController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="I7V-N0-sIu"/>
+                        <viewControllerLayoutGuide type="bottom" id="sJC-1P-WCN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9G2-pr-aiS">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="ZWK-sc-Zfq">
+                                <rect key="frame" x="20" y="72" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="CwG-jw-skE"/>
+                                    <constraint firstAttribute="height" constant="100" id="QPL-y5-wbn"/>
+                                    <constraint firstAttribute="width" constant="100" id="lwF-N6-bJt"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Repo Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dCe-5g-y5E">
+                                <rect key="frame" x="128" y="72" width="442" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="C4c-nS-Xfo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="C4c-nS-Xfo"/>
+                                    </mask>
+                                </variation>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" misplaced="YES" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pyh-eM-5bn">
+                                <rect key="frame" x="128" y="114" width="246" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eDb-t0-09t">
+                                <rect key="frame" x="550" y="72" width="30" height="30"/>
+                                <color key="backgroundColor" red="0.94891980229999995" green="0.94891980229999995" blue="0.94891980229999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="66E-Ro-tM2"/>
+                                    <constraint firstAttribute="height" constant="30" id="JOr-wn-yHL"/>
+                                    <constraint firstAttribute="width" constant="30" id="PZO-Ci-6kB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" red="0.93855628189999996" green="0.38354478600000003" blue="0.40391924099999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="66E-Ro-tM2"/>
+                                    </mask>
+                                </variation>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="open issues" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8yh-dA-QqA">
+                                <rect key="frame" x="527" y="110" width="53" height="13"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="53" id="3y4-za-ach"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="53" id="PlU-vX-cGf"/>
+                                    <constraint firstAttribute="height" constant="13" id="i0m-DZ-fOD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="10"/>
+                                <color key="textColor" red="0.93855628189999996" green="0.38354478600000003" blue="0.40391924099999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="PlU-vX-cGf"/>
+                                    </mask>
+                                </variation>
+                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="yTd-A3-1Sr">
+                                <rect key="frame" x="20" y="193" width="560" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="22y-A3-0Ys"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Issues"/>
+                                    <segment title="Pull Request"/>
+                                </segments>
+                            </segmentedControl>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yTd-A3-1Sr" firstAttribute="leading" secondItem="9G2-pr-aiS" secondAttribute="leadingMargin" id="0EW-kX-E3d"/>
+                            <constraint firstItem="yTd-A3-1Sr" firstAttribute="trailing" secondItem="9G2-pr-aiS" secondAttribute="trailingMargin" id="1oj-Dn-Cc7"/>
+                            <constraint firstItem="dCe-5g-y5E" firstAttribute="trailing" secondItem="8yh-dA-QqA" secondAttribute="trailing" id="1x5-31-Z6S"/>
+                            <constraint firstItem="8yh-dA-QqA" firstAttribute="leading" secondItem="Pyh-eM-5bn" secondAttribute="trailing" constant="28" id="35j-aP-1ZK"/>
+                            <constraint firstItem="sJC-1P-WCN" firstAttribute="top" secondItem="8yh-dA-QqA" secondAttribute="bottom" constant="477" id="7jy-xU-dd1"/>
+                            <constraint firstItem="ZWK-sc-Zfq" firstAttribute="top" secondItem="dCe-5g-y5E" secondAttribute="top" id="AG3-bI-pSI"/>
+                            <constraint firstItem="dCe-5g-y5E" firstAttribute="top" secondItem="eDb-t0-09t" secondAttribute="top" id="Dpd-tP-xiP"/>
+                            <constraint firstItem="sJC-1P-WCN" firstAttribute="top" secondItem="ZWK-sc-Zfq" secondAttribute="bottom" constant="428" id="Hz0-I4-BDc"/>
+                            <constraint firstItem="ZWK-sc-Zfq" firstAttribute="centerY" secondItem="Pyh-eM-5bn" secondAttribute="centerY" id="JGk-AZ-Vb1"/>
+                            <constraint firstItem="dCe-5g-y5E" firstAttribute="leading" secondItem="Pyh-eM-5bn" secondAttribute="leading" id="Jie-tv-ikf"/>
+                            <constraint firstItem="eDb-t0-09t" firstAttribute="trailing" secondItem="8yh-dA-QqA" secondAttribute="trailing" id="Jqi-8E-Mif"/>
+                            <constraint firstItem="yTd-A3-1Sr" firstAttribute="leading" secondItem="9G2-pr-aiS" secondAttribute="leadingMargin" id="LAH-De-PlV"/>
+                            <constraint firstItem="ZWK-sc-Zfq" firstAttribute="leading" secondItem="9G2-pr-aiS" secondAttribute="leadingMargin" id="RDr-SW-lf7"/>
+                            <constraint firstItem="yTd-A3-1Sr" firstAttribute="leading" secondItem="9G2-pr-aiS" secondAttribute="leadingMargin" id="Rna-MJ-R6h"/>
+                            <constraint firstItem="yTd-A3-1Sr" firstAttribute="trailing" secondItem="9G2-pr-aiS" secondAttribute="trailingMargin" id="T5U-aR-gWA"/>
+                            <constraint firstItem="8yh-dA-QqA" firstAttribute="top" secondItem="eDb-t0-09t" secondAttribute="bottom" constant="8" id="TWM-gm-QAf"/>
+                            <constraint firstItem="ZWK-sc-Zfq" firstAttribute="top" secondItem="I7V-N0-sIu" secondAttribute="bottom" constant="8" symbolic="YES" id="U16-UH-vnQ"/>
+                            <constraint firstItem="Pyh-eM-5bn" firstAttribute="top" secondItem="dCe-5g-y5E" secondAttribute="bottom" constant="21" id="UF6-Ik-cdt"/>
+                            <constraint firstItem="sJC-1P-WCN" firstAttribute="top" secondItem="Pyh-eM-5bn" secondAttribute="bottom" constant="470" id="WdN-Dw-BKx"/>
+                            <constraint firstItem="sJC-1P-WCN" firstAttribute="top" secondItem="eDb-t0-09t" secondAttribute="bottom" constant="498" id="aHL-Qt-a5q"/>
+                            <constraint firstItem="8yh-dA-QqA" firstAttribute="top" secondItem="dCe-5g-y5E" secondAttribute="bottom" constant="8" symbolic="YES" id="brs-wI-BqM"/>
+                            <constraint firstItem="yTd-A3-1Sr" firstAttribute="trailing" secondItem="9G2-pr-aiS" secondAttribute="trailingMargin" id="cbp-iL-4hR"/>
+                            <constraint firstItem="yTd-A3-1Sr" firstAttribute="top" secondItem="ZWK-sc-Zfq" secondAttribute="bottom" constant="21" id="ci1-Ca-tot"/>
+                            <constraint firstItem="eDb-t0-09t" firstAttribute="trailing" secondItem="9G2-pr-aiS" secondAttribute="trailingMargin" id="d1G-KF-b8g"/>
+                            <constraint firstItem="sJC-1P-WCN" firstAttribute="top" secondItem="ZWK-sc-Zfq" secondAttribute="bottom" constant="428" id="fC2-Sg-cJz"/>
+                            <constraint firstItem="dCe-5g-y5E" firstAttribute="leading" secondItem="ZWK-sc-Zfq" secondAttribute="trailing" constant="8" symbolic="YES" id="fl5-7j-BH6"/>
+                            <constraint firstItem="eDb-t0-09t" firstAttribute="leading" secondItem="Pyh-eM-5bn" secondAttribute="trailing" constant="51" id="jH2-15-pXW"/>
+                            <constraint firstItem="8yh-dA-QqA" firstAttribute="top" secondItem="eDb-t0-09t" secondAttribute="bottom" constant="8" symbolic="YES" id="kDy-dl-jem"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dCe-5g-y5E" secondAttribute="trailing" constant="10" id="llM-Bd-BIb"/>
+                            <constraint firstItem="8yh-dA-QqA" firstAttribute="top" secondItem="dCe-5g-y5E" secondAttribute="bottom" constant="17" id="qeE-IM-cR1"/>
+                            <constraint firstItem="eDb-t0-09t" firstAttribute="trailing" secondItem="dCe-5g-y5E" secondAttribute="trailing" id="rCA-Y9-W85"/>
+                            <constraint firstItem="8yh-dA-QqA" firstAttribute="trailing" secondItem="9G2-pr-aiS" secondAttribute="trailingMargin" id="rDZ-Zb-BGO"/>
+                            <constraint firstItem="8yh-dA-QqA" firstAttribute="leading" secondItem="Pyh-eM-5bn" secondAttribute="trailing" constant="74" id="wQ1-Pe-032"/>
+                            <constraint firstItem="Pyh-eM-5bn" firstAttribute="bottom" secondItem="8yh-dA-QqA" secondAttribute="bottom" id="yfd-4n-uj2"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="1x5-31-Z6S"/>
+                                <exclude reference="UF6-Ik-cdt"/>
+                                <exclude reference="yfd-4n-uj2"/>
+                                <exclude reference="35j-aP-1ZK"/>
+                                <exclude reference="TWM-gm-QAf"/>
+                                <exclude reference="brs-wI-BqM"/>
+                                <exclude reference="qeE-IM-cR1"/>
+                                <exclude reference="wQ1-Pe-032"/>
+                                <exclude reference="Jqi-8E-Mif"/>
+                                <exclude reference="jH2-15-pXW"/>
+                                <exclude reference="rCA-Y9-W85"/>
+                                <exclude reference="7jy-xU-dd1"/>
+                                <exclude reference="Hz0-I4-BDc"/>
+                                <exclude reference="WdN-Dw-BKx"/>
+                                <exclude reference="aHL-Qt-a5q"/>
+                                <exclude reference="fC2-Sg-cJz"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="IssuesLabel" destination="eDb-t0-09t" id="nO0-hr-aUC"/>
+                        <outlet property="RepoDescription" destination="Pyh-eM-5bn" id="uoj-0r-eju"/>
+                        <outlet property="RepoIcon" destination="ZWK-sc-Zfq" id="7kI-Ud-Xga"/>
+                        <outlet property="RepoName" destination="dCe-5g-y5E" id="lzS-gd-sis"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="U84-za-3X7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2791" y="-453"/>
         </scene>
         <!--Organisations Controller-->
         <scene sceneID="LnB-Av-1Q7">
